Using useLocation Hook

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://HAMMAD-DEVELOPER-TECH.github.io/TextUtill-App",
+  "homepage": "https://Hammad-Js.github.io/PBC-News-App-React",
   "name": "reactjs",
   "version": "0.1.0",
   "private": true,
